Implement Guilds + leaderboard

--- a/sfgame/src/main/resources/messages.properties
+++ b/sfgame/src/main/resources/messages.properties
@@ -3,10 +3,19 @@ login=Přihlásit se
 usernamePlaceholder=Zadejte své uživatelské jméno
 logoAlt=Logo společnosti
 
-
+-- Hlavní menu překlad
 tavern=Hospoda
 playerInventory=Inventář Bojovníka
 dungeons=Podzemí
 magicShop=Magický Obchodník
 weaponShop=Zbrojírna
 mainMenuTitle=Hlavní Menu
+
+-- Síň slávy překlad
+legacyLeaderboard=Síň Slávy
+
+-- Tlačítka překlad
+backToMainMenu=Zpět do Hlavního Menu
+
+guild=Cech
+guilds=Cechy
