--- a/sfgame/src/main/resources/messages_en.properties
+++ b/sfgame/src/main/resources/messages_en.properties
@@ -10,3 +10,12 @@ dungeons=Dungeons
 magicShop=Magic Shop
 weaponShop=Weapon Shop
 mainMenuTitle=Main Menu
+
+-- Legacy Leaderboard
+legacyLeaderboard=Legacy Leaderboard
+
+-- Buttons
+backToMainMenu=Back to Main Menu
+
+guild=Guild
+guilds=Guilds
