Working so far!

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,7 @@ logoAlt=Logo společnosti
 
 -- Hlavní menu překlad
 tavern=Hospoda
+tavernLocations=Lokace expedic
 playerInventory=Inventář Bojovníka
 dungeons=Podzemí
 magicShop=Magický Obchodník
