--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -5,6 +5,7 @@ logoAlt=Company Logo
 
 -- Main Menu Text
 tavern=Tavern
+tavernLocations=Tavern Locations
 playerInventory=Player Inventory
 dungeons=Dungeons
 magicShop=Magic Shop
